# BookBridge

./: .gitignore  .replit  convert_pickle.py  inspect_pickles.py  package-lock.json  package.json  pyproject.toml
.config/go/telemetry/local/: asm@go1.23.8-go1.23.8-linux-amd64-2025-05-01.v1.count  asm@go1.23.8-go1.23.8-linux-amd64-2025-05-02.v1.count  (+8 more)
attached_assets/: Pasted-Buyer-seller-roles-ML-based-price-cap-Chat-system-Book-recommendation-Chatbot-Authentication-P-1746125206012.txt
backend/: go.mod  go.sum  init_db.go  init_db_fixed.go  init_db_fixed2.go  main.go  main_simple.go
backend/db/: db.go  db_simple.go
backend/handlers/: auth.go  auth_simple.go  book.go  chat.go  chatbot.go  payment.go  user.go
backend/middleware/: auth.go  auth_simple.go
backend/models/: book.go  cart.go  chat.go  user.go
backend/utils/: auth_context.go  gemini.go  jwt.go  password.go
frontend/: admin-dashboard.html  book-detail.html  cart.html  chat.html  checkout.html  community.html  index.html  login.html  payment-success.html  profile.html  register.html  seller-dashboard.html  seller-profile.html
frontend/css/: cart.css  checkout.css  dashboard.css  profile.css  style.css
frontend/js/: admin.js  api.js  auth.js  book-detail.js  books.js  cart.js  chat.js  chatbot.js  checkout.js  community.js  profile.js  seller.js
frontend/js/lib/: deep-chat.js
ml/: book_data_fetcher.py  inspect_pickles.py  ml_service.py  price_predictor.py  recommender.py
ml/compatible_pickles/: books.pkl  popular.pkl  pt.pkl  similarity_scores.pkl
